--- a/Compilador DKXX/nbproject/project.properties
+++ b/Compilador DKXX/nbproject/project.properties
@@ -29,9 +29,11 @@ dist.jar=${dist.dir}/Compilador_DKXX.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.java-cup-11b-runtime.jar=src/parser/java-cup-11b-runtime.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.java-cup-11b-runtime.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
