ejempos añadidos y errores comentados

--- a/Compilador DKXX/nbproject/private/private.properties
+++ b/Compilador DKXX/nbproject/private/private.properties
@@ -1,4 +1,4 @@
-application.args=ejemplos/testgramatica.dkxx
+application.args=ejemplos/fallo_2.dkxx
 compile.on.save=true
 do.depend=false
 do.jar=true
